crates/pg_syntax/tests/snapshots/postgres_regress/int8@102.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '100'::int2 / '0'::int8;"
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    AExpr@7..30
      TypeCast@7..18
        AConst@7..12
          Sconst@7..12 "'100'"
        Typecast@12..14 "::"
        TypeName@14..18
          Ident@14..18 "int2"
      Whitespace@18..19 " "
      Ascii47@19..20 "/"
      Whitespace@20..21 " "
      TypeCast@21..30
        AConst@21..24
          Sconst@21..24 "'0'"
        Typecast@24..26 "::"
        TypeName@26..30
          Ident@26..30 "int8"
  Ascii59@30..31 ";"

