crates/pg_syntax/tests/snapshots/postgres_regress/int8@112.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT oid::int8 FROM pg_class WHERE relname = 'pg_class';"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..16
    TypeCast@7..16
      ColumnRef@7..10
        Ident@7..10 "oid"
      Typecast@10..12 "::"
      TypeName@12..16
        Ident@12..16 "int8"
  Whitespace@16..17 " "
  From@17..21 "FROM"
  Whitespace@21..22 " "
  RangeVar@22..30
    Ident@22..30 "pg_class"
  Whitespace@30..31 " "
  Where@31..36 "WHERE"
  Whitespace@36..37 " "
  AExpr@37..57
    ColumnRef@37..44
      Ident@37..44 "relname"
    Whitespace@44..45 " "
    Ascii61@45..46 "="
    Whitespace@46..47 " "
    AConst@47..57
      Sconst@47..57 "'pg_class'"
  Ascii59@57..58 ";"

