crates/pg_syntax/tests/snapshots/postgres_regress/int8@114.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT q1, q1 << 2 AS \"shl\", q1 >> 3 AS \"shr\" FROM INT8_TBL;"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "q1"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..27
    AExpr@11..18
      ColumnRef@11..13
        Ident@11..13 "q1"
      Whitespace@13..14 " "
      Op@14..16 "<<"
      Whitespace@16..17 " "
      AConst@17..18
        Iconst@17..18 "2"
    Whitespace@18..19 " "
    As@19..21 "AS"
    Whitespace@21..22 " "
    Ident@22..27 "\"shl\""
  Ascii44@27..28 ","
  Whitespace@28..29 " "
  ResTarget@29..45
    AExpr@29..36
      ColumnRef@29..31
        Ident@29..31 "q1"
      Whitespace@31..32 " "
      Op@32..34 ">>"
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "3"
    Whitespace@36..37 " "
    As@37..39 "AS"
    Whitespace@39..40 " "
    Ident@40..45 "\"shr\""
  Whitespace@45..46 " "
  From@46..50 "FROM"
  Whitespace@50..51 " "
  RangeVar@51..59
    Ident@51..59 "INT8_TBL"
  Ascii59@59..60 ";"

