crates/pg_syntax/tests/snapshots/postgres_regress/int8@117.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM generate_series('+4567890123456789'::int8, '+4567890123456799'::int8, 2);"
---
SelectStmt@0..87
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..85
    List@14..85
      FuncCall@14..85
        Ident@14..29 "generate_series"
        Ascii40@29..30 "("
        TypeCast@30..55
          AConst@30..49
            Sconst@30..49 "'+4567890123456789'"
          Typecast@49..51 "::"
          TypeName@51..55
            Ident@51..55 "int8"
        Ascii44@55..56 ","
        Whitespace@56..57 " "
        TypeCast@57..82
          AConst@57..76
            Sconst@57..76 "'+4567890123456799'"
          Typecast@76..78 "::"
          TypeName@78..82
            Ident@78..82 "int8"
        Ascii44@82..83 ","
        Whitespace@83..84 " "
        AConst@84..85
          Iconst@84..85 "2"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

